<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/label_background"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/Faculty"
            android:textColor="@color/blue"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Website"
            android:textColor="#ADADAD"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Language"
            android:textColor="#ADADAD"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/TypeC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/TypeCourse"
            android:textColor="#ADADAD"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/obiettivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Obiettivi"
            android:textColor="#ADADAD"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/course"
            android:textColor="@color/blue"
            android:textSize="18sp" />






    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:text="X"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/blue"/>


</LinearLayout>