<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ContactFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/contact1"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:fontFamily="casual"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="90dp"
        android:text="@string/contact2"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="145dp"
        android:text="@string/contact3"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:fontFamily="casual"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/chiara"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:scaleType="center"
        app:riv_oval="true"
        android:src="@drawable/chiara" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="205dp"
        android:layout_marginLeft="150dp"
        android:text="Chiara Tuninetti"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="150dp"
        android:text="Cyber Security"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:fontFamily="casual"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/luigi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="290dp"
        android:scaleType="center"
        app:riv_oval="true"
        android:src="@drawable/luigi" />
    <TextView
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="150dp"
        android:text="Luigi Tocci"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="150dp"
        android:text="Cyber Security"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:fontFamily="casual"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/giada"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:scaleType="center"
        app:riv_oval="true"
        android:src="@drawable/giada" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="385dp"
        android:layout_marginLeft="150dp"
        android:text="Giada Simionato"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="150dp"
        android:text="Artificial Intelligence and Robotics"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:fontFamily="casual"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/stella"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="470dp"
        android:scaleType="center"
        app:riv_oval="true"
        android:src="@drawable/stella" />
    <TextView
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginTop="475dp"
        android:layout_marginLeft="150dp"
        android:text="Mariastella Fazioli"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="150dp"
        android:text="Engineering in Computer Science"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:fontFamily="casual"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="595dp"
        android:text="@string/contact4"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:fontFamily="casual"
        />

    <ImageButton
        android:id="@+id/contactinstagram"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="630dp"
        android:background="@drawable/instagramlogo"
        android:layout_gravity="center_horizontal"></ImageButton>
    <ImageButton
        android:id="@+id/contactfacebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:background="@drawable/facebooklogo"
        android:layout_marginLeft="100dp"></ImageButton>
    <ImageButton
        android:id="@+id/contacttwitter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="630dp"
        android:layout_gravity="right"
        android:background="@drawable/twitter"></ImageButton>

</FrameLayout>